100DaysOfKubernetes/Day7/base/vscode.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: vscode-letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/websocket-services: "vscode"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: vscode.diagon.cloud
    http:
      paths:
      - backend:
          service:
            name: ingress
            port:
              number: 8443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - vscode.diagon.cloud
    secretName: vscode-tls
